// Vitest Snapshot v1

exports[`<SampleSearchToolbar /> > should render when [canCreate=%p] false 1`] = `
<Toolbar>
  <InputSearch
    onChange={[Function]}
    placeholder="Sample name"
    value="foo"
  />
</Toolbar>
`;

exports[`<SampleSearchToolbar /> > should render when [canCreate=%p] true 1`] = `
<Toolbar>
  <InputSearch
    onChange={[Function]}
    placeholder="Sample name"
    value="foo"
  />
  <LinkButton
    color="blue"
    tip="Create"
    to="/samples/create"
  >
    <Icon
      name="plus-square fa-fw"
    />
  </LinkButton>
</Toolbar>
`;
